# platformer

./: CMakeLists.txt  README.md  desert_level.json  desert_night.json  gas_station_interior.json  gas_station_interior_lighted.json  level.json  light_test_level.json  mountain_level.json  temp_level.json  test_level.json
assets/: .directory
assets/backgrounds/: .directory
assets/backgrounds/mountains/: .directory
assets/levels/: the_road.json
doc/: design.txt
shaders/: plain_fragment.glsl  plain_vertex.glsl  screen_crt_fragment.glsl  screen_fragment.glsl
src/: main.cpp
src/audio/: audio.c  audio.h
src/game/: AABB.cpp  AABB.h  AnimationManager.cpp  AnimationManager.h  Camera.cpp  Camera.h  Game.cpp  Game.h  JsonUtil.cpp  JsonUtil.h  Level.cpp  Level.h  ParallaxScroller.cpp  ParallaxScroller.h  PolyUtil.cpp  PolyUtil.h  TransitionEffect.cpp  TransitionEffect.h  Utils.cpp  Utils.h
src/game/components/: ActorComponent.cpp  ActorComponent.h  CollisionComponent.cpp  CollisionComponent.h  CollisionInfoComponent.h  DoorComponent.h  FlickerEffectComponent.h  GlowEffectComponent.h  ImageComponent.cpp  ImageComponent.h  InputComponent.h  LadderComponent.h  PathComponent.h  PhysicComponent.h  PlatformComponent.cpp  PlatformComponent.h  PointLightComponent.cpp  PointLightComponent.h  SpriteComponent.cpp  SpriteComponent.h  TerrainComponent.cpp  TerrainComponent.h  TransformComponent.h  VerletMeshComponent.cpp  VerletMeshComponent.h  WindEffectComponent.h
src/game/editor/: DoorPropertyEditor.cpp  DoorPropertyEditor.h  Editor.cpp  Editor.h  IComponentPropertyEditor.h  ITool.h  ImagePropertyEditor.cpp  ImagePropertyEditor.h  ImageTool.cpp  ImageTool.h  LadderPropertyEditor.cpp  LadderPropertyEditor.h  LadderTool.cpp  LadderTool.h  LightPropertyEditor.cpp  LightPropertyEditor.h  LightTool.cpp  LightTool.h  MoveTool.cpp  MoveTool.h  PathTool.cpp  PathTool.h  PlatformTool.cpp  PlatformTool.h  RectangleTool.cpp  RectangleTool.h  SpritePropertyEditor.cpp  SpritePropertyEditor.h  TerrainPropertyEditor.cpp  TerrainPropertyEditor.h  TerrainTool.cpp  TerrainTool.h  ToolUtil.cpp  ToolUtil.h  TransformPropertyEditor.cpp  TransformPropertyEditor.h  WindEffectPropertyEditor.cpp  WindEffectPropertyEditor.h
src/game/editor/shared/: RectanglePropertyEditor.cpp  RectanglePropertyEditor.h
src/game/imeditor/: Editor.cpp  Editor.h
src/game/systems/: ActorSystem.cpp  ActorSystem.h  CollisionSystem.cpp  CollisionSystem.h  DoorSystem.cpp  DoorSystem.h  InputSystem.cpp  InputSystem.h  PlatformSystem.cpp  PlatformSystem.h  RaycastSystem.cpp  RaycastSystem.h  RenderDebugSystem.cpp  RenderDebugSystem.h  RenderLevelSystem.cpp  RenderLevelSystem.h  UpdateAnimationSystem.cpp  UpdateAnimationSystem.h  UpdateEffectsSystem.cpp  UpdateEffectsSystem.h  VerletSystem.cpp  VerletSystem.h
src/glad/: glad.c
src/imgui/: imgui_impl_opengl3.cpp
src/include/: ECS.h  LevelConfig.h  RenderBuffers.h  Vector2.h  glad.h  stb_rect_pack.h
src/include/cglm/: common.h  types.h
src/input/: Input.cpp  Input.h  SDLInputDevice.cpp  SDLInputDevice.h  mapped_input.h
src/renderer/: Animation.cpp  Animation.h  Commands.cpp  Commands.h  Font.cpp  Font.h  Gui.cpp  Gui.h  IRenderDevice.h  OGLRenderDevice.cpp  OGLRenderDevice.h  PixelBuffer.cpp  PixelBuffer.h  RenderCmdBuffer.cpp  RenderCmdBuffer.h  TextureAtlas.cpp  TextureAtlas.h  Types.h  WindEffectParameters.h
src/renderer2/: FrameBuffer.cpp  FrameBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
src/util/: ComponentVector.h  lodepng.c  lodepng.h  math_util.c  math_util.h  string_util.h
